# opencode-search-engine

./: .env  .env.laptop  .gitignore  .gitmodules  .hpv_proof.json  .hpv_proof.md  .opencode_verify_report.md  .opencode_verify_state.json  .prerelease_report.json  .prerelease_report.md  .qa_report.json  .qa_report.md  CLAUDE.md  COMPREHENSIVE_TEST_RESULTS.md  DEVELOPMENT.md  E2E_TEST_SUMMARY.md  FEATURES.md  FINAL_E2E_RESULTS.md  INTEGRATION_TEST_RESULTS.md  PARENT_MONITOR_PATTERN.py  README.md  VERIFICATION_COMPLETE.md  health-supervisor.sh  requirements-lock-py312-linux-gpu.txt
.claude/: .lean-ack.json  coverage-ledger.json  lean-ledger.jsonl  p11_5_e2e_evidence.txt  settings.json
.githooks/: post-commit
docs/: CONFORMANCE_EVALUATION.md  INSTALL.md  PERFORMANCE.md  info-hierarchy.md
embedder/: BATCH_COALESCING.md  CLAUDE.md  GPU_OPTIMIZATIONS.md  MEMORY_FIXES.md  Makefile  build.sh  hook-pil-stub.py  hook-tokenizers.py  opencode-embedder.spec  pyproject.toml  quality_test.py
embedder/opencode_embedder/: __init__.py  __main__.py  _version.py  chunker.py  embeddings.py  server.py  test_model.onnx  tokenizer.py
embedder/tests/: __init__.py  conftest.py  e2e_gpu_enforcement.py  test_chunker.py  test_chunker_fixes.py  test_cuda_tensor_support.py  test_embeddings_config.py  test_gpu_enforcement_e2e.py  test_gpu_logging.py  test_migraphx_provider.py  test_reranker.py  test_server.py  test_server_config.py  test_thread_safety.py  test_tokenizer.py  test_warmup.py
golden/: MANIFEST.json  admin_status.json  alerts.json  architecture_domains.json  ask_all.json  ask_architecture.json  ask_business.json  ask_feature.json  ask_global.json  auto_pipeline_status.json  business_rules.json  classify_ask.json  classify_feature.json  classify_global.json  classify_graph_callers.json  classify_search.json  communities.json  feature_map.json  federation.json  graph_callees.json  graph_callers.json  graph_definition.json  graph_diff.json  graph_impact.json  graph_impact_narrative.json  graph_path.json  graph_semantic_trace.json  healthz.json  hierarchy.json  import_cycles.json  integrations_status.json  jobs.json  kb_health.json  metrics.json  (+12 more)
(+436 files in other folders)
