[project]
name = "opencode-embedder"
version = "0.1.0"
description = "Semantic code embedder for opencode (local embeddings)"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OpenCode Team" }]
dependencies = [
    # Embeddings + rerank (local, GPU-accelerated via onnxruntime-gpu)
    # fastembed-gpu is identical to fastembed but depends on onnxruntime-gpu
    # instead of onnxruntime (CPU), enabling CUDA/TensorRT inference
    "fastembed-gpu>=0.4.0",
    # GPU-accelerated ONNX Runtime with bundled CUDA 12.x + cuDNN libraries
    "onnxruntime-gpu[cuda,cudnn]>=1.24.0",
    # Chunking: Chonkie (CodeChunker via tree-sitter, SemanticChunker, TokenChunker)
    # Requires >=1.5.0 for CodeChunker tokenizer param support
    "chonkie[code,semantic]>=1.5.0",
    # Chunking: LangChain text splitters (Markdown, HTML, JSON structure-aware)
    "langchain-text-splitters>=0.3.0",
    # HTML parsing (required by LangChain HTML splitters)
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    # YAML parsing
    "pyyaml>=6.0.0",
    # IPC: msgpack serialization for model server protocol
    "msgpack>=1.0.0",
    # HTTP server for REST API (runs alongside socket server)
    "aiohttp>=3.9.0",
    # Required by chonkie's embedding registry (imports openai eagerly)
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
opencode-model-server = "opencode_embedder.server:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["opencode_embedder"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
